commit 18 - Admin only methods . All 'destroy' and 'update' methods are under admin namespace . Added corresponding routes to admin namespace . Created 'treatment' routes
